<resources>
    <string name="app_name">DexApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pokedex">Pokedex</string>
    <string name="level">Lvl</string>
    <string name="description">Description</string>
    <string name="effect">Effect</string>
    <string name="pokemon_that_learn_move">Other pokemon that learn</string>
    <string name="pp">PP |</string>
    <string name="power">Att |</string>
    <string name="accuracy">Acc |</string>
    <string name="hp">HP</string>
    <string name="atack">ATK</string>
    <string name="defense">DEF</string>
    <string name="special_attack">SPA</string>
    <string name="special_defense">SPD</string>
    <string name="speed">SPE</string>
    <string name="title_activity_pokemon_description"></string>
    <string name="evo_chain">Evolutionary Chain</string>
    <string name="abilities">Abilities</string>
    <string name="match_up">Type Match Up</string>
    <string name="kanto_region">Kanto 001-151</string>
    <string name="move_list">Moves A-Z</string>
    <string name="ability_list">Abilities A-Z</string>
    <string name="bug">BUG x1</string>
    <string name="dark">DARK x1</string>
    <string name="dragon">DRAGON x1</string>
    <string name="electric">ELECTRIC x1</string>
    <string name="fairy">FAIRY x1</string>
    <string name="fighting">FIGHTING x1</string>
    <string name="fire">FIRE x1</string>
    <string name="flying">FLYING x1</string>
    <string name="ghost">GHOST x1</string>
    <string name="grass">GRASS x1</string>
    <string name="ground">GROUND x1</string>
    <string name="ice">ICE x1</string>
    <string name="normal">NORMAL x1</string>
    <string name="poison">POISON x1</string>
    <string name="psychic">PSYCHIC x1</string>
    <string name="rock">ROCK x1</string>
    <string name="steel">STEEL x1</string>
    <string name="water">WATER x1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pokemon_details">PokemonDetailsActivity</string>
    <string name="title_activity_hidding_bar">HiddingBarActivity</string>
    <string name="title_activity_attackdex">Attackdex</string>
    <string name="title_activity_move_details"></string>
    <string name="title_activity_abilitydex">Abilitydex</string>
    <string name="title_activity_ability_details"></string>
</resources>
