<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PokemonDetailsnActivity">

    <RelativeLayout
        android:id="@+id/layout_pokemon_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackbackground"
        android:padding="5dp">

        <ImageView
            android:id="@+id/abstract_pokeball"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/pokeball_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/abstract_pokeball"
            android:layout_alignLeft="@id/abstract_pokeball"
            android:layout_alignRight="@id/abstract_pokeball"
            android:layout_alignTop="@id/abstract_pokeball"
            android:layout_centerVertical="true"
            android:src="@drawable/jolteon" />

        <TextView
            android:id="@+id/tv_type1"
            style="@style/StatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/abstract_pokeball"
            android:text="ELECTRIC"
            tools:text="ELECTRIC" />

        <View
            style="@style/WhiteDivider"
            android:layout_below="@id/tv_type1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/abstract_pokeball"
            android:layout_below="@id/tv_type1">
            <LinearLayout
                android:id="@+id/linear_first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_pokemon_hp"
                    style="@style/StatsText"
                    android:text="@string/hp" />

                <TextView
                    android:id="@+id/tv_pokemon_hp_value"
                    style="@style/StatsValue"
                    android:text="65"
                    tools:text="65" />

                <TextView
                    android:id="@+id/tv_pokemon_attack"
                    style="@style/StatsText"
                    android:text="@string/atack" />

                <TextView
                    android:id="@+id/tv_pokemon_attack_value"
                    style="@style/StatsValue"
                    android:text="65"
                    tools:text="65" />

                <TextView
                    android:id="@+id/tv_pokemon_defense"
                    style="@style/StatsText"
                    android:text="@string/defense" />

                <TextView
                    android:id="@+id/tv_pokemon_defense_value"
                    style="@style/StatsValue"
                    android:layout_alignParentRight="true"
                    android:text="60"
                    tools:text="60" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_first_row"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_pokemon_speciala"
                    style="@style/StatsText"
                    android:text="@string/special_attack" />

                <TextView
                    android:id="@+id/tv_pokemon_speciala_value"
                    style="@style/StatsValue"
                    android:text="110"
                    tools:text="110" />

                <TextView
                    android:id="@+id/tv_pokemon_speciald"
                    style="@style/StatsText"
                    android:text="@string/special_defense"
                    tools:text="SPD" />

                <TextView
                    android:id="@+id/tv_pokemon_speciald_value"
                    style="@style/StatsValue"
                    android:text="95"
                    tools:text="95" />

                <TextView
                    android:id="@+id/tv_pokemon_speed"
                    style="@style/StatsText"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/tv_pokemon_speed_value"
                    style="@style/StatsValue"
                    android:text="130"
                    tools:text="130" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
    <!--scrollview old position-->

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_pokemon_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.design.widget.TabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/PagerTitles"
        app:tabSelectedTextColor="@color/white"
        android:background="@color/redbackground"
        app:tabIndicatorColor="@color/white"
        app:tabMode="scrollable" />
</LinearLayout>